# orca-python

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  Config.py  DSU.py  LICENSE  MANIFEST.in  Metrics.py  README.md  Results.py  Utilities (copia).py  Utilities.py  config.py  config_example.json  makefile  metrics.py  previous_utilities.py  pyproject.toml  requirements.txt  results.py  setup.py  utilities.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_improvement.yml  feature_request.yml  other_issue.yml
.github/scripts/: check_version_consistency.py
.github/workflows/: check-sdist.yml  lint.yml  pr_precommit.yml  pr_pytest.yml  release.yml  unit-tests.yml
Algorithms/: ELMOP.py  LR.py  OneVsFollowers.py  OneVsNext.py  OneVsPrevious.py  OrderedPartitions.py  OrdinalDecomposition.py  RBF.py  SVM.py
Classifiers/: OrdinalDecomposition.py
Configurations/: config_example.json  example_config.json  full_functionality_test.json  ordinal_config.json  prueba_config.json  single_test.json  testing-config.json
Datasets/balance-scale/: test_balance-scale.1  test_balance-scale.12  test_balance-scale.14  test_balance-scale.15  test_balance-scale.16  test_balance-scale.17  test_balance-scale.18  test_balance-scale.19  test_balance-scale.2  test_balance-scale.21  test_balance-scale.23  test_balance-scale.24  test_balance-scale.25  test_balance-scale.26  test_balance-scale.27  test_balance-scale.29  test_balance-scale.3  test_balance-scale.4  test_balance-scale.6  test_balance-scale.7  test_balance-scale.8  test_balance-scale.csv  train_balance-scale.11  train_balance-scale.14  train_balance-scale.16  train_balance-scale.17  train_balance-scale.18  train_balance-scale.19  train_balance-scale.20  train_balance-scale.21  train_balance-scale.22  train_balance-scale.23  train_balance-scale.26  train_balance-scale.27  train_balance-scale.28  train_balance-scale.3  train_balance-scale.5  train_balance-scale.7  train_balance-scale.8  train_balance-scale.9  (+1 more)
Datasets/car/: train_car.csv
Datasets/contact-lenses/: test_contact-lenses.11  test_contact-lenses.12  test_contact-lenses.13  test_contact-lenses.15  test_contact-lenses.16  test_contact-lenses.17  test_contact-lenses.18  test_contact-lenses.2  test_contact-lenses.20  test_contact-lenses.21  test_contact-lenses.24  test_contact-lenses.26  test_contact-lenses.27  test_contact-lenses.29  test_contact-lenses.3  test_contact-lenses.4  test_contact-lenses.5  test_contact-lenses.7  test_contact-lenses.8  test_contact-lenses.9  train_contact-lenses.11  train_contact-lenses.16  train_contact-lenses.2  train_contact-lenses.21  train_contact-lenses.22  train_contact-lenses.23  train_contact-lenses.24  train_contact-lenses.25  train_contact-lenses.26  train_contact-lenses.3  train_contact-lenses.5  train_contact-lenses.6  train_contact-lenses.7  train_contact-lenses.9
Datasets/forest/: test_forest.csv  train_forest.csv
Datasets/iris/: train_iris.csv
Datasets/nomnist_reducido/: test_nomnist.csv  train_nomnist.csv
Datasets/parkinsons/: test_parkinsons.csv  train_parkinsons.csv
Datasets/pruebas/: test_pruebas.0  test_pruebas.1  train_pruebas.0  train_pruebas.1
Datasets/sin/: test_sin.csv  train_sin.csv
Datasets/toy/: train_toy.csv
Datasets/winequality-red/: test_winequality-red.csv
Tests/: test_ordinal_decomposition.py  test_results.py  test_utilities.py
classifiers/: NNOP.py  NNPOM.py  OrdinalDecomposition.py  REDSVM.py  SVOREX.py
classifiers/svorex/: Makefile  datalist.c  main.c  ordinal_takestep.c  setup.py  smo_model_python.c  smo_routine.c  smo_routine_python.c  svc_predict.c  svorex_module.c  svorex_predict.c  svorex_train.c
configurations/: full_functionality_test.json  nnop_mze_test.json  nnop_test.json  nnpom_mae_test.json  nnpom_test.json  orca_comparison.json  redsvm_test.json  single_test.json  svorex_test.json
datasets/ERA/: test_ERA.1  test_ERA.10  test_ERA.11  test_ERA.12  test_ERA.14  test_ERA.16  test_ERA.17  test_ERA.18  test_ERA.19  test_ERA.2  test_ERA.20  test_ERA.21  test_ERA.25  test_ERA.29  test_ERA.6  test_ERA.8  train_ERA.1  train_ERA.11  train_ERA.12  train_ERA.16  train_ERA.17  train_ERA.18  train_ERA.19  train_ERA.20  train_ERA.23  train_ERA.24  train_ERA.25  train_ERA.26  train_ERA.29  train_ERA.3  train_ERA.4  train_ERA.6
datasets/balance-scale/: test_balance-scale.13  test_balance-scale.28  train_balance-scale.13  train_balance-scale.2  train_balance-scale.4
datasets/car/: test_car.10  test_car.11  test_car.14  test_car.15  test_car.18  test_car.2  test_car.20  test_car.21  test_car.23  test_car.24  test_car.25  test_car.26  test_car.28  test_car.29  test_car.3  test_car.4  test_car.5  test_car.7  test_car.9  train_car.1  train_car.10  train_car.13  train_car.19  train_car.2  train_car.22  train_car.23  train_car.24  train_car.25  train_car.27  train_car.28  train_car.29  train_car.3  train_car.4  train_car.5  train_car.6
datasets/contact-lenses/: test_contact-lenses.10  train_contact-lenses.29
datasets/winequality-red/: test_winequality-red.1  test_winequality-red.10  test_winequality-red.11  test_winequality-red.12  test_winequality-red.13  test_winequality-red.14  test_winequality-red.15  test_winequality-red.17  test_winequality-red.2  test_winequality-red.20  test_winequality-red.25  test_winequality-red.28  test_winequality-red.29  test_winequality-red.4  test_winequality-red.5  test_winequality-red.7  test_winequality-red.8  test_winequality-red.9  train_winequality-red.11  train_winequality-red.14  train_winequality-red.16  train_winequality-red.17  train_winequality-red.2  train_winequality-red.20  train_winequality-red.22  train_winequality-red.23  train_winequality-red.24  (+5 more)
doc/: spanish_user_manual.ipynb  spanish_user_manual.md
orca_python/: __init__.py  metrics.py  results.py  utilities.py
skordinal/: __init__.py
tests/: test_metrics.py  test_nnpom.py  test_ordinal_decomposition.py  test_redsvm.py  test_redsvm_load.py  test_results.py  test_svorex.py  test_svorex_load.py  test_utilities.py  tests_nnop.py
(+749 files in other folders)
