[build-system]
requires = ["setuptools>=74.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skordinal"
version = "0.0.1"
description = "Ordinal classification for Python, scikit-learn compatible"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Francisco Bérchez-Moreno", email = "fberchez@uco.es"},
    {name = "Víctor Manuel Vargas", email = "vvargas@uco.es"},
    {name = "Javier Barbero-Gómez", email = "jbarbero@uco.es"},
    {name = "Rafael Ayllón-Gavilán", email = "rayllong@uco.es"},
    {name = "David Guijo-Rubio", email = "dguijo@uco.es"},
    {name = "Ángel Sevilla Molina", email = "asevilla@uco.es"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "scikit-learn>=1.3.0",
    "numpy>=1.21",
    "pandas>=1.0.1",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist[psutil]",
    "pytest-benchmark",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/ayrna/skordinal"
Repository = "https://github.com/ayrna/skordinal"
"Bug Tracker" = "https://github.com/ayrna/skordinal/issues"

[tool.setuptools.packages.find]
include = [
    "skordinal",
    "skordinal.*",
]
exclude = ["*.tests"]
namespaces = false

[tool.setuptools.package-data]
"skordinal.datasets" = ["data/*.csv"]

[tool.setuptools]
ext-modules = [
    {name = "skordinal.classifiers.libsvmRank.python.svm", language = "c++", sources = [
            "skordinal/classifiers/libsvmRank/python/svm-module.cpp",
            "skordinal/classifiers/libsvmRank/python/svm-train.cpp",
            "skordinal/classifiers/libsvmRank/python/svm-predict.cpp",
            "skordinal/classifiers/libsvmRank/python/svm-model-python.cpp",
            "skordinal/classifiers/libsvmRank/python/svm.cpp",
        ], extra-compile-args = ["-Wno-unused-result"]},
    {name = "skordinal.classifiers.svorex.svorex", language = "c", sources = [
            "skordinal/classifiers/svorex/svorex_module.c",
            "skordinal/classifiers/svorex/svorex_train.c",
            "skordinal/classifiers/svorex/svorex_predict.c",
            "skordinal/classifiers/svorex/alphas.c",
            "skordinal/classifiers/svorex/cachelist.c",
            "skordinal/classifiers/svorex/datalist.c",
            "skordinal/classifiers/svorex/def_settings.c",
            "skordinal/classifiers/svorex/loadfile.c",
            "skordinal/classifiers/svorex/ordinal_takestep.c",
            "skordinal/classifiers/svorex/setandfi.c",
            "skordinal/classifiers/svorex/smo_kernel.c",
            "skordinal/classifiers/svorex/smo_routine.c",
            "skordinal/classifiers/svorex/smo_settings.c",
            "skordinal/classifiers/svorex/smo_timer.c",
            "skordinal/classifiers/svorex/svc_predict.c",
            "skordinal/classifiers/svorex/smo_model_python.c",
            "skordinal/classifiers/svorex/smo_loadproblem_python.c",
            "skordinal/classifiers/svorex/smo_routine_python.c",
        ], extra-compile-args = ["-Wno-unused-result"], libraries = ["m"]}
]

[tool.pytest.ini_options]
testpaths = ["skordinal"]
addopts = ["--color=yes", "--import-mode=importlib"]

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    "__pycache__",
    "build",
    "dist",
    "skordinal/classifiers/libsvmRank/",
    "skordinal/classifiers/svorex/setup.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
exclude = ["skordinal/classifiers/libsvmRank/", "skordinal/classifiers/svorex/"]
